Fixed styling
Fixed album image from being too large and pushing time control too far down

--- a/src/styles/_song.scss
+++ b/src/styles/_song.scss
@@ -6,7 +6,7 @@
   justify-content: center;
 
   img {
-    width: 40%;
+    width: 40vh;
     border-radius: 20%;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
   }
